org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
.mcq-content-container {
    height: 100%;
    width: 100%;
    line-height: 19px;
    font-size: 14px;
    letter-spacing: 0.7px;
}

.mcq-content-container .question-content-container {
    height: 23.33333vh;
    font-size: 14px;
    line-height: 6.7vh;
}

.mcq-content-container .option-container.vertical {
    height: 100%;
    width: 100%;
    position: relative;
    display: table;
}
.mcq-content-container .outer-option-container.vertical {
    height: 77.5%;
    width: 78.2%;
    position: relative;
    margin-right: 10.40%;
    margin-left: 10.40%;
}

.mcq-content-container .option-container.vertical .option-block-container {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    justify-content: center;
    display: flex;
    align-items: center;
    vertical-align: middle;
}

.mcq-content-container .option-container.vertical .option-block-container .option-block {
    cursor: pointer;
    width: 24.93%;
    height: 65.5161290323%;
    margin-right: 0.9%;
    position: relative;
    float: left;
}

.mcq-content-container .option-container.vertical .option-block-container .option-block.selected {
    background-color: #7AB4EE;
    border: solid 2px #024F9D;
}

#mcq-question-container .mcq-qLeft-content-container .opt-selected {
    background-color: #7AB4EE;
    border: solid 2px #024F9D;
}

#mcq-question-container .mcq-question-container-grid .mcq-grid-option-container .mcq-grid-options-row .mcq-grid-option-wrapper .mcq-grid-option-outer .selected {
    background-color: #7AB4EE;
    border: solid 2px #024F9D; 
}

.mcq-content-container .option-container.vertical .option-block-container .option-block img.audio {
    cursor: pointer;
    position: absolute;
    top: -6%;
    left: 0;
    right: 0;
    margin: auto;
    width: 20%;
    border-radius: 50%;
}

.mcq-content-container .option-container.vertical .option-block-container .option-block .option-image-container {
    height: 75%;
    width: 100%;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center; 
}

.mcq-content-container .option-container.vertical .option-block-container .option-block .option-image-container img {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    cursor: pointer;
    max-height: 100%;
    max-width: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    margin: auto;
}

.mcq-content-container .option-container.vertical .option-block-container .option-block img.tick {
    display: none;
    position: absolute;
    bottom: -10%;
    left: 0;
    right: 0;
    margin: auto;
    width: 30%;
    z-index: 0;
    border-radius: 50%;
}

.mcq-content-container .option-container.vertical .option-block-container .option-block.selected img.tick {
    display: block;
}

.mcq-content-container .option-container.vertical .option-block-container .option-block .option-text-container {
    overflow:hidden;
    height: 25%;
    width: 100%;
    position: relative;
}

.mcq-content-container .option-container.vertical .option-block-container .option-block .option-text-container>span {
    font-size: 6vh;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 3%;
    left: 5%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.mcq-content-container .option-container.vertical .option-block:last-child {
    margin-right: 0%;
}

/* Horizontal layout starts */

.mcq-content-container .option-container.horizontal {
    height: 100%;
    width: 100%;
    position: relative;
    display: table;
}
.mcq-content-container .outer-option-container.horizontal {
    padding-top: 2.5%;
    margin-right: 10.40%;
    margin-left: 10.40%;
    height: 76.5%;
    position: relative;
    overflow: auto;
    padding-bottom: 2.5%;
}

.mcq-content-container .outer-option-container.horizontal::-webkit-scrollbar {
    width: 0.5em;
}
.mcq-content-container .outer-option-container.horizontal::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.mcq-content-container .outer-option-container.horizontal::-webkit-scrollbar-thumb {
    background-color: #65A0E6;
    outline: 1px solid slategrey;
    border: 0.3em;
    height: 75%;
    width: 75%;
}

.mcq-content-container .option-container.horizontal .option-block-container {
    justify-content: center;
    display: table-cell;
    align-items: center;
    vertical-align: middle;
    padding-right: 5px;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block {
    cursor: pointer;
    width: 100%;
    height: 15vh;
    margin-bottom: 1.5625%;
    border-radius: 4px;
    background-color: #FFFFFF;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
    position: relative;
    display: table;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block.selected {
    background-color: #7AB4EE;
    border: solid 2px #024F9D;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block img.audio {
    cursor: pointer;
    position: absolute;
    top: 0%;
    bottom: 0%;
    left: 1%;
    margin: auto;
    width: 6%;
    z-index: 1;
}
.mcq-content-container .option-container.horizontal .option-block-container .option-block img.audio.with-image {
    cursor: pointer;
    position: absolute;
    top: 0%;
    bottom: 0%;
    left: 14%;
    margin: auto;
    width: 6%;
    z-index: 1;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-image-container {
    height: 100%;
    width: 10vw;
    float: left;
    position: relative;
    display: table-cell;    
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-image-container.no-image {
    display: none;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-image-container img {
    cursor: pointer;
    max-height: 100%;
    max-width: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    margin: auto;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block img.tick {
    display: none;
    position: absolute;
    top: 0%;
    bottom: 0%;
    right: 1%;
    margin: auto;
    width: 6%;
    z-index: 1;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block.selected img.tick {
    display: block;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container {
    width: 100%;
    height: 100%;
    position: relative;
    display: table-cell;
    vertical-align: middle;
    padding-left: 5%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.with-image {
    margin-left: 10%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.with-audio {
    padding-left: 8%;
    padding-right: 8%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.with-audio .urdu-text{
    margin-right:-9%; /* to override padding-right of the parent element*/
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.with-audio.with-image {
    margin-left: 15%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container>span {
    width:92%;
    height: auto;
    position: relative;
    top: 0;
    bottom: 0;
    display: block;
    align-items: center;
    vertical-align: middle;
}

.mcq-content-container .option-container.horizontal .option-block:last-child {
    margin-bottom: 0%;
}

.mcq-imagehorizontal-content-container{
    width: 100%;
    height: 100%;
    position: relative;
    top: 0%;
}
.mcq-imagehorizontal-question-container{
    height: 48%;
}
.mcq-imagehorizontal-options{
    margin-top: 0%;
    display: flex;
    flex-wrap: nowrap;
    margin-left: 7%;
    margin-right: 7%;
    width: 90%;
    height: 100%;
    justify-content: center;
    overflow-x: scroll;
    justify-content: left;
    max-width: 87%;
    overflow-y: hidden;
}
.mcq2-2-option-imagegird{
    min-width: 23.5%;
    margin: 2px 0px 0px 6px;
    height: 83%;
    background-color: white;
    border-radius: 10px;
}
.imagehorizontal-option-text{
    text-align: center;
    margin-top: 24%;
    font-size: large;
}
.mcq-imagehorizontal-option-audio{
    position: absolute;
    z-index: 10;
    height: 10vh;
    text-align: center;
    margin-left: -3%;
    top: -15%;
}
.imagehorizontal-parent{
    overflow: hidden;
    height: 91%;
}
 .bg-graphics-3 {
    position: relative;
    height: 50%;
    background-color: #F9A817;
    top: 3%;
}
.bg-graphics-3 .bg-circle {
    position: fixed;
    width: 60vw;
    height: 106.6662vh;
    border-radius: 50%;
    opacity: 0.15;
    background-color: #ffffff;
}

.opt-selected-imagehorizontal {
    background-color: #7AB4EE;
    border: solid 2px #024F9D;
}

.zoom-image-horizontal{
    position: absolute;
    bottom: 22%;
    right: 0%;
    width: 25%;
}
.mcq-imagehorizontal-options ::-webkit-scrollbar-thumb {
    background: #8080804a;
    border-radius: 10px;
    max-height: 30px;
}
::-webkit-scrollbar{
    height: 4px;
    width: 4px;
    background: gray;
}
::-webkit-scrollbar-thumb:horizontal{
    background: #000;
    border-radius: 10px;
}

